# cpp_example

./: .gitmodules  CMakeLists.txt
design_mode/singleton/: example.cpp
mmap_file/: Makefile  net.h  result.md
src/: test_tuple.cpp
src/benchmark/current/: current_thread.h
src/benchmark/io_uring/: test.cpp
src/benchmark/mmap_file/: main.cpp  mmap_file.h
src/data_structure/buffer/: buffer.h  buffer_test.cpp
src/data_structure/sync_queue/: queue_test.cpp  sync_queue.h
src/design_mode/crtp/: crtp.cpp
src/design_mode/factory/: animal.h  animal_factory.h  cat.h  dog.h
src/design_mode/object_pool/: CMakeLists.txt  benchmark_objectpool.cpp  buffer.h  object_pool.h
src/design_mode/observer/: Makefile  example.cpp  observer.cpp  observer.h
src/design_mode/singleton/: Makefile  singleton.h
src/design_mode/thread_pool/: Makefile  example.cpp  test_threadpool  thread_pool.h
src/grammar_example/chrono/: CMakeLists.txt  benchmark_getcur_time.cpp  convert_str_to_timestamp.cpp  get_curr_time.h  normal_type.cpp  type.cpp
src/grammar_example/concept/: func.cpp
src/grammar_example/coro/: co_await.cpp  co_return.cpp  counter1.cpp  counter2.cpp  (+2 more)
src/template/: foldtraverse.cpp  isprime.h  print.cpp  stack_notype.cpp  stacknontype.hpp  varprint1.hpp
src/test/: constinit.cpp  constinit.h  destroy_at.cpp  expected.cpp  in_place_type.cpp  is_copy_constructible_v.cpp  is_invocable_r_v.cpp  make_index_sequence.cpp  nest_template.cpp  nodiscard.cpp  packet.cpp  recursive_template.cpp  remove_reference_t.cpp  requires.cpp  tuple_element.cpp  type_identity.cpp
(+63 files in other folders)
